- Add an admin notice when no payment gateway is active but paid memberships exist
- Add bulk actions to the Members admin page
- Add a dedicated Edit Membership page with improved layout
- Add an edit page to change the Membership Type at any time
- Add an edit page to override Automated Email Responses for each Membership
- Add an edit page to override Protection Messages for each Membership
- Improve payment logs to display additional information for errors
- Improve the layout of the coupon fields during in the payment form
- Fix wrong subscription logic that activated Subscriptions without payment in a few cases
- Fix possible memory issue that happened when updating the plugin
- Fix the invitation code Add-on (integration in payment form was not working)
- Fix a caching issue that caused problems with Subscriptions when memcache was enabled
- Fix problem in network wide mode that would not display all Users in the Members page
- Fix wrong rounding-logic in Stripe gateway
- Fix bug that prevented admin to change the recurring payment frequency to anything else than 'Days' in few cases
- Fix a minor security hole in the data import module

1.0.0.8
----------------------------------------------------------------------
- Add new option to customize which users are considered Admin users (details in the Help > Advanced page)
- Fix a typo in the PayPal Single gateway that caused M2 to ignore some payment information
- Fix bugs that prevented removing protection from individual posts or pages
- Fix the search function on the Members page
- Fix two possible infinite loops that resulted in timeouts or rule values not being saved
- Fix wrong protection logic of the Admin Side Add-on
- Fix wrong protection logic of the Advanced Menu Add-on
- Fix small issue that did not correctly disable the Media Add-on
- Fix a wrong parameters that limited search results of list tables to 5 items in some cases