@@ -263,6 +263,7 @@ class MS_View_Shortcode_Invoice extends MS_View {
 		</div>
 		<?php
 		$html = ob_get_clean();
+		$html = apply_filters( 'ms_compact_code', $html );
 
 		return apply_filters(
 			'ms_shortcode_invoice',
